# ctu-turtle-robot

./: .gitignore  LICENSE  README.md  app.py  listener.py
workspace/.catkin_tools/profiles/default/: devel_collisions.txt
workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
workspace/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
workspace/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
workspace/devel/.private/task_01_package/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
workspace/devel/.private/task_01_package/share/task_01_package/cmake/: task_01_packageConfig.cmake
workspace/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
workspace/devel/share/task_01_package/cmake/: task_01_packageConfig-version.cmake  task_01_packageConfig.cmake
workspace/src/task_01_package/: CMakeLists.txt  package.xml
workspace/src/task_01_package/src/: listener.py
