<?xml version="1.0"?>
<package format="2">
  <name>task_01_package</name>
  <version>0.0.0</version>
  <description>The task_01_package package</description>

  <maintainer email="fake@todo.todo">fake</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
